--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title type="text/css" rel="stylesheet"
-    	href=""https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    	href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -19,13 +19,13 @@
         padding:10px 0px 10px 0px;
       }
       .video, .thermometer, .order, .social {
-        border:1px dotted;
+        border: 1px dotted;
         text-align: center;
       }
       .video {
         /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
         height: 124px;
-        line-height:124px;
+        line-height: 124px;
       }
       .thermometer, .order, .social {
         /* line-height to vertially center: http://phrogz.net/css/vertical-align/index.html */
@@ -82,7 +82,7 @@
         </div>
       <div class="row section2">
         <div class="span12">
-          Marketting Section 1
+          Marketting Section 2
         <div>
       <div>
       <div class="row faq">
