--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title type="text/css" rel="stylesheet"
