--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="span2 logo">
           Logo
         </div>
-        <div class="span6 logo">
+        <div class="span6 blank">
           Blank
         </div>
         <div class="span4 about">
@@ -65,7 +65,7 @@
           Video
         </div>
         <div class="span6">
-          <div clas="thermometer">
+          <div class="thermometer">
             Thermometer
           </div>
           <div class="order">
