4 bootstrap stuff..done..now debb2

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
       /* All form factors */        
       /* Main body and Headings*/
       body{
-      	font-family: 'Open Sans',HElvetica,Arial,sans-serif;
+      	font-family: 'Open Sans',Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        text-align: center;
       }
       p.lead {
         padding-top: 1.5px;
@@ -70,7 +71,7 @@
       .video, .thermometer, .order, .social, statistics {
         text-align: center;
       }
-      .statisctics h3, .statistics p {
+      .statistics h3, .statistics p {
         color: white;
       }
 
@@ -101,7 +102,7 @@
   
     <!-- Mobile friendly navbar-->	
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="nav-bar-inner">
+      <div class="navbar-inner">
       	<div class="container">
       	  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
        	    <span class="icon-bar"></span>
@@ -185,14 +186,33 @@
 	  <img class="img-polaroid" scr="http://placehold.it/480x300">
         </div>
 	<div class="span5 copy">
-	  <p>
+	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+	  blandit, risus sed pharetra molestie, ipsum mi congue odio, eu
+	  tempor ipsum neque cursus elit. Vivamus vel rutrum turpis.
+	  Maecenas viverra euismod iaculis. Donec congue eu enim ut cursus.
+	  Morbi vehicula vestibulum nunc vel consectetur. Vestibulum dictum
+	  posuere nisi viverra molestie. Cras dignissim mi suscipit pretium
+	  placerat. Praesent iaculis iaculis commodo. Curabitur vehicula
+	  mauris ut odio ultricies, eu imperdiet orci semper. Maecenas magna
+	  massa, aliquet nec nisi quis, dictum rutrum urna. Aenean vel odio
+	  auctor, viverra turpis at, malesuada elit. 
 	  </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>
+          <p>Vestibulum at tellus sit amet urna aliquet condimentum. Fusce
+          eu mauris fringilla diam laoreet consequat. Suspendisse mattis
+          tortor in ipsum bibendum, vitae tristique sapien posuere. Mauris
+          vel consectetur lorem. Integer ac vulputate ligula. Nulla lacinia
+          neque urna, aliquet porta erat dapibus a. Proin ut risus lacinia,
+          vehicula lectus sed, volutpat metus. Proin blandit convallis odio.
+          Sed imperdiet ornare ligula, et imperdiet nisi malesuada ac. Duis
+          at dui ut quam auctor imperdiet ac at velit. Interdum et malesuada
+          fames ac ante ipsum primis in faucibus. In pellentesque lacus in
+          nisl posuere ultricies. Cras eu sem lorem. Phasellus viverra
+          turpis nisi, id lacinia neque varius in. 
           </p>
         </div>
 	<div class="span5 asset">
