4 bootstrap stuff..done..now debb2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Where First Bitstarter</title>
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
@@ -19,7 +19,7 @@
          paddin-top: 60px;
         }
         .linediv-l {
-         border-right:1px white solid;
+         border-right: 1px white solid;
         }
         .linediv-r {
          border-left: 1px white solid;
@@ -151,7 +151,7 @@
               </div>
 	      <div class="span4">
                 <div class="linediv-c">
-                  <h3>6000</h3> <p>of $10,000</p>
+                  <h3>$6000</h3> <p>of $10,000</p>
                 </div>
               </div>        
 	      <div class="span4">
