--- a/index.html
+++ b/index.html
@@ -161,12 +161,15 @@
               </div>        
             </div>
           </div>
+
           <div class="span10 offset1">
-            <!-- bootstrap progress bar -->
+                      <!-- Bootstrap progress bar -->
+            <!-- http://twitter.github.io/bootstrap/components.html#progress
+                      -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width 60%;"></div>
-              <div class="bar bar-warning" style="width 40%;"></div>
-            </div>
+              <div class="bar bar-success" style="width: 60%;"></div>
+              <div class="bar bar-warning" style="width: 40%;"></div>
+            </div>  
           </div>
           <div class="span6 offset3 order">
             <!-- standard bootstrap button -->
@@ -183,7 +186,7 @@
       <!-- marketting part copy begins -->	
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-	  <img class="img-polaroid" scr="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">          
         </div>
 	<div class="span5 copy">
 	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
@@ -216,7 +219,7 @@
           </p>
         </div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" scr="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">          
         </div>
       </div>
  	
