4 bootstrap stuff..done..now debb4

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
       	    <span class="icon-bar"></span>
       	    <span class="icon-bar"></span>
       	  </button>
-      	  <a class="brand" href="#">Bitstarter</>
-      	  <div class="nav-collapse collapse">
-      	    <ul class="nav">
-      	      <li class="active"><a href="#">Home</a></li>
+      	  <a class="brand" href="#">Bitstarter<a/>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
       	      <li><a href="#about">About</a></li>
       	      <li><a href="#contact">Contact</a></li>
       	    </ul>
