--- a/index.html
+++ b/index.html
@@ -99,28 +99,27 @@
     </style>
   </head>
   <body>
-  
-    <!-- Mobile friendly navbar-->	
+    <!-- Mobile friendly navbar-->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-      	<div class="container">
-      	  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-       	    <span class="icon-bar"></span>
-      	    <span class="icon-bar"></span>
-      	    <span class="icon-bar"></span>
-      	  </button>
-      	  <a class="brand" href="#">Bitstarter<a/>
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+             data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-      	      <li><a href="#about">About</a></li>
-      	      <li><a href="#contact">Contact</a></li>
-      	    </ul>
-      	  </div><!-- n/.av collapse-->
-      	</div>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
-
+    </div>    
     <!-- Resisable layout-->    
     <div class="container">
       <div class="row-fluid heading">
@@ -137,7 +136,7 @@
         <div class="span5 offset video">
           <img class="img-polaroid" src="http://placehold.it/480x300">          
         </div>
-        
+
         <!-- define new actions -->
         <div class="span5 actions">
           <div class="span8 offset2">
@@ -164,8 +163,7 @@
 
           <div class="span10 offset1">
                       <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress
-                      -->
+            <!-- http://twitter.github.io/bootstrap/components.html#progress-->
             <div class="thermometer progress active">
               <div class="bar bar-success" style="width: 60%;"></div>
               <div class="bar bar-warning" style="width: 40%;"></div>
@@ -182,14 +180,15 @@
           </div>
         </div> <!-- span 5 actions-->                
       </div> <!-- row fluid pitch -->
-              
+
       <!-- marketting part copy begins -->	
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
           <img class="img-polaroid" src="http://placehold.it/480x300">          
         </div>
 	<div class="span5 copy">
-	  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+	  <p>
+	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
 	  blandit, risus sed pharetra molestie, ipsum mi congue odio, eu
 	  tempor ipsum neque cursus elit. Vivamus vel rutrum turpis.
 	  Maecenas viverra euismod iaculis. Donec congue eu enim ut cursus.
@@ -205,7 +204,8 @@
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>Vestibulum at tellus sit amet urna aliquet condimentum. Fusce
+          <p>
+          Vestibulum at tellus sit amet urna aliquet condimentum. Fusce
           eu mauris fringilla diam laoreet consequat. Suspendisse mattis
           tortor in ipsum bibendum, vitae tristique sapien posuere. Mauris
           vel consectetur lorem. Integer ac vulputate ligula. Nulla lacinia
@@ -234,7 +234,20 @@
       	            What does FAQ stand for?
       	          </a>
       	        </div>
-      	        <div id="collapse Two" class="accordion-body collapse">
+      	        <div id="collapseOne" class="accordion-body collapse">
+      	          <div class="accordion-inner">
+      	            Frequently Asked Question
+      	          </div>
+      	        </div>
+      	     </div> <!-- fin accordion group-->
+      	     <div class="accordion-group">
+      	       <div class="accordion-heading">
+      	         <a class="accordion-toggle" data-toggle="collapse"
+      	         data-parent="#accordion2" href="#collapseTwo">
+      	          What's a frequently Asked Question
+      	         </a>
+      	       </div>     
+      	       <div id="collapseTwo" class="accordion-body collapse">
       	          <div class="accordion-inner">
       	            A question which is commonly asked by users
       	          </div>
