--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       /* Large Desktop*/
       @media (min-width: 980px) {
         body {
-         paddin-top: 60px;
+         padding-top: 60px;
         }
         .linediv-l {
          border-right: 1px white solid;
@@ -31,7 +31,7 @@
          padding: 2.5% 10%;
        }
         .linediv-l {
-         border-bottom:1px white solid;
+         border-bottom: 1px white solid;
         }
         .linediv-r {
          border-top: 1px white solid;
@@ -41,7 +41,7 @@
       /* All form factors */        
       /* Main body and Headings*/
       body{
-      	font-family: 'Open Sans',Helvetica, Arial, sans-serif;
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -103,8 +103,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar"
-             data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -120,23 +119,24 @@
         </div>
       </div>
     </div>    
-    <!-- Resisable layout-->    
+	<!-- resisable layout -->
     <div class="container">
       <div class="row-fluid heading">
-        <div class="span12">
+	<div class="span12">
           <h1>Product</h1>
         </div>
-      </div>
+      </div>   
+
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One Sentence description </p>
+          <p class="lead">One sentence description.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
-        <div class="span5 offset video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">          
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
-
+        
         <!-- define new actions -->
         <div class="span5 actions">
           <div class="span8 offset2">
