hw4 part 2 desing testing carousel plus img

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/back_bola.jpg" alt="">
+          <img src="http://i.imgur.com/kCYeEKN.jpg?1" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Would you like to change the way you party?.</h1>
