hw4 part 2 design

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       margin: 0;
       line-height: 1.25;
       color: #fff;
-      text-shadow: 0 1px 1px rgba(0,0,0,.4);
+      text-shadow: 0 3px 3px rgba(0,0,0,.4);
     }
     .carousel-caption .btn {
       margin-top: 10px;
@@ -76,10 +76,10 @@
         .linediv-r {
          border-left: 1px white solid;
         }
-		      .carousel .item {
+		.carousel .item {
         height: 500px;
        }
-       .carousel img {
+        .carousel img {
         width: auto;
         height: 500px;
        }
@@ -195,31 +195,31 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="http://i.imgur.com/kCYeEKN.jpg?1" alt="">
+          <img src="http://i.imgur.com/UpqD1LP.jpg?1" title="Hosted by imgur.com" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Would you like to change the way you party?.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p class="lead">We want you to enjoy your nights out, wihtout having to wait or deciding if the place might be to crowded.</p>
               <a class="btn btn-large btn-primary" href="#">Sign up today</a>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="../assets/img/examples/slide-02.jpg" alt="">
+          <img src="http://i.imgur.com/kCYeEKN.jpg?1" title="Hosted by imgur.com" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Your Friends will love it.</h1>
+              <p class="lead">With our easy to use interface connected to Facebook. You can use your social connection to your advantage.</p>
               <a class="btn btn-large btn-primary" href="#">Learn more</a>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="../assets/img/examples/slide-03.jpg" alt="">
+          <img src="http://i.imgur.com/ogGwkn3.jpg?1" title="Hosted by imgur.com" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>No matter your country.</h1>
+              <p class="lead">Our localization technology together with your setup preferences will get you the time of your life.</p>
               <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
           </div>
@@ -230,27 +230,28 @@
     </div><!-- /.carousel -->
 	
 	<!-- new product lines -->
-	<div class="row-fluid">
-    	<div class="span4">...</div>
-    	<div class="span8">...</div>
-    </div> 
 	<!-- END new product lines -->
 	
 	<!-- resisable layout -->
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-          <h1>Product</h1>
+          <h1>2 Rumba</h1>
         </div>
       </div>   
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One sentence description.</p>
+          <p class="lead">The service to help you party.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          	  <p align="justify">
+	  Our service will help you get the tables, find the places with greatest offers and bar hopping routine. 
+	  All these plus the ability to share it and vote together with your friends.
+	  You could be at a big city or a small town, you will get the edge over what to do and where.
+	   vel consectetur lorem. 
+	  </p>
         </div>
         
         <!-- define new actions -->
@@ -266,12 +267,12 @@
               </div>
 	      <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$1000</h3> <p>of $10,000</p>
                 </div>
               </div>        
 	      <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                  <h3>45</h3> <p>days left</p>
                 </div>
               </div>        
             </div>
@@ -281,8 +282,8 @@
                       <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 10%;"></div>
+              <div class="bar bar-warning" style="width: 90%;"></div>
             </div>  
           </div>
           <div class="span6 offset3 order">
@@ -292,7 +293,8 @@
           <div class="span8 offset2 social">
             <!-- social buttons are not included in default bootstrap -->
     	    <button class="btn btn-twitter"><i class="icon-twitter"></i>| Twitter</button>                
-	    <button class="btn btn-facebook"><i class="icon-facebook"></i>| Facebook</button>                
+	    <button class="btn btn-facebook"><i class="icon-facebook"></i>| Facebook</button>   
+		<button class="btn btn-google-plus"><i class="icon-google-plus"></i>| Google+</button>             
           </div>
         </div> <!-- span 5 actions-->                
       </div> <!-- row fluid pitch -->
@@ -300,45 +302,22 @@
       <!-- marketting part copy begins -->	
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">          
+          <img class="img-polaroid" src="http://i.imgur.com/uwzyb4K.jpg?1" title="Hosted by imgur.com">          
         </div>
 	<div class="span5 copy">
 	  <p>
-	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
-	  blandit, risus sed pharetra molestie, ipsum mi congue odio, eu
-	  tempor ipsum neque cursus elit. Vivamus vel rutrum turpis.
-	  Maecenas viverra euismod iaculis. Donec congue eu enim ut cursus.
-	  Morbi vehicula vestibulum nunc vel consectetur. Vestibulum dictum
-	  posuere nisi viverra molestie. Cras dignissim mi suscipit pretium
-	  placerat. Praesent iaculis iaculis commodo. Curabitur vehicula
-	  mauris ut odio ultricies, eu imperdiet orci semper. Maecenas magna
-	  massa, aliquet nec nisi quis, dictum rutrum urna. Aenean vel odio
-	  auctor, viverra turpis at, malesuada elit. 
-	  </p>
-        </div>
-      </div>
-
-      <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
-          <p>
-          Vestibulum at tellus sit amet urna aliquet condimentum. Fusce
-          eu mauris fringilla diam laoreet consequat. Suspendisse mattis
-          tortor in ipsum bibendum, vitae tristique sapien posuere. Mauris
-          vel consectetur lorem. Integer ac vulputate ligula. Nulla lacinia
+	  Our service will help you get the tables, find the places with greatest offers and bar hopping routine. 
+	  All these plus the ability to share it and vote together with your friends.
+	  You could be at a big city or a small town, you will get the edge over what to do and where.
+	   vel consectetur lorem. Integer ac vulputate ligula. Nulla lacinia
           neque urna, aliquet porta erat dapibus a. Proin ut risus lacinia,
           vehicula lectus sed, volutpat metus. Proin blandit convallis odio.
           Sed imperdiet ornare ligula, et imperdiet nisi malesuada ac. Duis
           at dui ut quam auctor imperdiet ac at velit. Interdum et malesuada
-          fames ac ante ipsum primis in faucibus. In pellentesque lacus in
-          nisl posuere ultricies. Cras eu sem lorem. Phasellus viverra
-          turpis nisi, id lacinia neque varius in. 
-          </p>
-        </div>
-	<div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">          
+	  </p>
         </div>
       </div>
- 	
+
       <!-- For the FAQ; bit of js, jquery and bootstrap.js as dependencies-->
       <div class="row-fluid faq">
       	  <div class="span10 offset1">
@@ -347,12 +326,12 @@
       	      <div class="accordion-group">
       	        <div class="accordion-heading">
    		  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-      	            What does FAQ stand for?
+      	            Ho do I use your service?
       	          </a>
       	        </div>
       	        <div id="collapseOne" class="accordion-body collapse">
       	          <div class="accordion-inner">
-      	            Frequently Asked Question
+      	            Soon you will be able to join us and get in touch with the nightlife
       	          </div>
       	        </div>
       	     </div> <!-- fin accordion group-->
@@ -360,12 +339,12 @@
       	       <div class="accordion-heading">
       	         <a class="accordion-toggle" data-toggle="collapse"
       	         data-parent="#accordion2" href="#collapseTwo">
-      	          What's a frequently Asked Question
+      	          Will it cost money?
       	         </a>
       	       </div>     
       	       <div id="collapseTwo" class="accordion-body collapse">
       	          <div class="accordion-inner">
-      	            A question which is commonly asked by users
+      	            That is an interesting question we will work on
       	          </div>
       	        </div>  
       	      </div> <!-- accordion group -->
