Edited product desc in index.html new texts

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <img src="http://i.imgur.com/ogGwkn3.jpg?1" title="Hosted by imgur.com" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>No matter your country.</h1>
+              <h1>No matter your country or location.</h1>
               <p class="lead">Our localization technology together with your setup preferences will get you the time of your life.</p>
               <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
@@ -241,7 +241,7 @@
       </div>   
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">The service to help you party.</p>
+          <p class="lead">The service to support you party.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
