fixed stagin bugs in develop branch.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <img src="http://i.imgur.com/ogGwkn3.jpg?1" title="Hosted by imgur.com" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>No matter your country or location.</h1>
+              <h1>No matter your country.</h1>
               <p class="lead">Our localization technology together with your setup preferences will get you the time of your life.</p>
               <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
@@ -288,7 +288,7 @@
           </div>
           <div class="span6 offset3 order">
             <!-- standard bootstrap button -->
-	    <button class="btn btn-success btn-large">Preorder</button>                
+	    <button class="btn btn-success btn-large">Preorder NOW</button>                
           </div>
           <div class="span8 offset2 social">
             <!-- social buttons are not included in default bootstrap -->
