--- a/index.html
+++ b/index.html
@@ -175,8 +175,24 @@
       .footer a {
         color: #ccccff;
       }
-   
+      /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+ 	  div.addthis_toolbox {
+  		width:180px;
+  		margin: 0 auto;
+ 	  }
     </style>
+<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	ga('create', 'UA-XXXX-Y');
+	ga('send', 'pageview');
+	
+	</script>
+<!-- End Google Analytics -->	
   </head>
   <body>
 
@@ -334,11 +350,16 @@
 		  <div class="row-fluid">	
           <div class="span8 offset2 social">
             <!-- social buttons are not included in default bootstrap -->
-
-    	    <button class="btn btn-twitter"><i class="icon-twitter"></i>| Twitter</button>                
-	    <button class="btn btn-facebook"><i class="icon-facebook"></i>| Facebook</button>   
-
-		<button class="btn btn-google-plus"><i class="icon-google-plus"></i>| Google+</button>             
+<!-- AddThis Button BEGIN -->
+			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+			  <a class="addthis_button_preferred_1"></a>
+			  <a class="addthis_button_preferred_2"></a>
+			  <a class="addthis_button_compact"></a>
+			 <a class="addthis_counter addthis_bubble_style"></a>
+			</div>
+			<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5200b7207b71b162"></script>
+<!-- AddThis Button END -->        
           </div>
 		  </div>
         </div> <!-- fixed correction -->
