--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 
             <!-- standard bootstrap button -->
-	    <button class="btn btn-success btn-large">Preorder NOW</button>                
+	  <a class="coinbase-button" data-code="1aee2762c7bab5246d1aa56d820e0a69" data-button-style="custom_small" href="https://coinbase.com/checkouts/1aee2762c7bab5246d1aa56d820e0a69">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>           
 
           </div>
 		  </div>
@@ -505,4 +505,4 @@
       </div>
     </div> <!-- container -->	
   </body>
-</html>
+</html>           
